Fix .nav-collapse and .btn-navbar vertical alignment

--- a/less/school.less
+++ b/less/school.less
@@ -345,6 +345,9 @@ code {
   .btn-navbar{
     .btn-navbar-reset;
     text-transform: capitalize;
+    position: relative;
+    top: 10px;
+    
 
     &:hover{
       .btn-navbar-reset;
@@ -372,8 +375,11 @@ code {
   color: #FFF;
   text-shadow: none;
 }
+
 .nav-collapse{
+  position: relative;
   background: @support-cyan;
+  top: 12px;  
 
   @media (max-width: 979px){
     &.collapse{
